Enfore checkstyle rules: headers, braces, etc.