@@ -1,9 +1,11 @@
-/*
- * (c) 2022 Open Source Geospatial Foundation - all rights reserved This code is licensed under the
- * GPL 2.0 license, available at the root application directory.
+/* (c) 2022 Open Source Geospatial Foundation - all rights reserved
+ * This code is licensed under the GPL 2.0 license, available at the root
+ * application directory.
  */
+
 package org.geoserver.cloud.autoconfigure.gwc.core;
 
+import static com.github.stefanbirkner.systemlambda.SystemLambda.withEnvironmentVariable;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -15,6 +17,7 @@ import com.google.common.base.Throwables;
 import java.io.File;
 import java.io.IOException;
 import org.geoserver.cloud.autoconfigure.gwc.GeoWebCacheContextRunner;
+import org.geoserver.cloud.gwc.config.core.GeoWebCacheConfigurationProperties;
 import org.geoserver.cloud.gwc.repository.CloudDefaultStorageFinder;
 import org.geoserver.cloud.gwc.repository.CloudGwcXmlConfiguration;
 import org.geoserver.cloud.gwc.repository.CloudXMLResourceProvider;
@@ -37,7 +40,10 @@ import org.springframework.boot.test.context.runner.WebApplicationContextRunner;
 /**
  * @since 1.0
  */
-class GwcCoreAutoConfigurationTest {
+class GeoWebCacheAutoConfigurationTest {
+
+    @TempDir
+    File tmpDir;
 
     WebApplicationContextRunner runner;
 
@@ -46,7 +52,7 @@ class GwcCoreAutoConfigurationTest {
      */
     @BeforeEach
     void setUp(@TempDir File tmpDir) {
-        GeoServerExtensionsHelper.clear();
+        System.clearProperty("GEOWEBCACHE_CACHE_DIR");
         runner = GeoWebCacheContextRunner.newMinimalGeoWebCacheContextRunner(tmpDir);
     }
 
@@ -119,9 +125,54 @@ class GwcCoreAutoConfigurationTest {
             Throwable startupFailure = context.getStartupFailure();
             assertNotNull(startupFailure);
             Throwable root = Throwables.getRootCause(startupFailure);
-            if (!expectedException.isInstance(root)) root.printStackTrace();
+            if (!expectedException.isInstance(root)) {
+                root.printStackTrace();
+            }
             assertInstanceOf(expectedException, root);
-            if (null != expectedMessage) assertThat(root.getMessage(), containsString(expectedMessage));
+            if (null != expectedMessage) {
+                assertThat(root.getMessage(), containsString(expectedMessage));
+            }
         });
+    }
+
+    /**
+     * Note this test will fail without {@code --add-opens=java.base/java.util=ALL-UNNAMED} JVM
+     * parameter (watch out if running it from the IDE, maven is configured to set it)
+     */
+    @Test
+    void defaultCacheDirectoryFromEnvVariable() throws Exception {
+        File dir = new File(tmpDir, "env_cachedir");
+        assertThat(dir).doesNotExist();
+        String dirpath = dir.getAbsolutePath();
+        withEnvironmentVariable("GEOWEBCACHE_CACHE_DIR", dirpath).execute(() -> {
+            assertThat(System.getenv("GEOWEBCACHE_CACHE_DIR")).isEqualTo(dirpath);
+            runner.withPropertyValues("gwc.cache-directory: ${GEOWEBCACHE_CACHE_DIR}")
+                    .run(context -> {
+                        assertThat(context).hasNotFailed();
+                        assertThat(dir).isDirectory();
+
+                        var gwcConfigProps = context.getBean(GeoWebCacheConfigurationProperties.class);
+                        assertThat(gwcConfigProps.getCacheDirectory()).isEqualTo(dir.toPath());
+                    });
+        });
+        assertThat(System.getenv("GEOWEBCACHE_CACHE_DIR")).isNull();
+    }
+
+    @Test
+    void defaultCacheDirectoryFromSystemProperty() {
+        File dir = new File(tmpDir, "sysprop_cachedir");
+        assertThat(dir).doesNotExist();
+        String dirpath = dir.getAbsolutePath();
+
+        System.setProperty("GEOWEBCACHE_CACHE_DIR", dirpath);
+        try {
+            runner.withPropertyValues("gwc.cache-directory: ${GEOWEBCACHE_CACHE_DIR}")
+                    .run(context -> {
+                        assertThat(context).hasNotFailed();
+                        assertThat(dir).isDirectory();
+                    });
+        } finally {
+            System.clearProperty("GEOWEBCACHE_CACHE_DIR");
+        }
     }
 }
